# adsv-public-calendar

./: .gitattributes  .gitignore  pyproject.toml
.github/DISCUSSION_TEMPLATE/: announcements.yml
.github/ISSUE_TEMPLATE/: template-for-calendar-events.md
.github/workflows/: deploy-pages.yml  process-calendar-event.yml
calendar_bot/: update_calendar.py  utils.py
data/: _headers  adsv_events_public.ics
data/individual_events/: ghdiscussion_11.ics  ghdiscussion_8.ics  ghdiscussion_9.ics  ghissue_2.ics  ghissue_3.ics  ghissue_4.ics  ghissue_5.ics
tests/: test_calendar_bot.py
