[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-bot"
version = "0.1.0"
description = "A bot that manages a public ICS web calendar based on events specified via GitHub Discussion Board."
requires-python = ">=3.13,<3.14"
dependencies = [
    "ics==0.7.2",
]

[project.scripts]
calendar-bot = "calendar_bot.update_calendar:main"

[tool.setuptools]
packages = ["calendar_bot"]
